load("@wpi_bazel_rules//rules:cc.bzl", "wpilib_cc_library")
load("@wpi_bazel_rules//rules:wpilib_repo.bzl", "make_cpp_alias")

package(default_visibility = ["//visibility:public"])

make_cpp_alias(name = "navx-navx-cpp")

wpilib_cc_library(
    name = "navx-cpp",
    raw_deps = [
        "@navx-cpp-headers//:headers",
        ":navx-cpp-libs",
    ],
)

alias(
    name = "navx-java",
    actual = "@maven//:com_kauailabs_navx_frc_navx_java",
)

wpilib_cc_library(
    name = "navx",
    raw_deps = select({
        "@wpi_bazel_rules//toolchains/conditions:roborio": [
            "@navx-navx-cpp-headers//:headers",
            ":navx-navx-cpp-libs",
        ],
        "@bazel_tools//src/conditions:windows": [
            "@navx-navx-cpp-headers//:headers",
            ":navx-navx-cpp-libs",
        ],
    }),
)
